# Sirius

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pm2.json  pyproject.toml
app/: __init__.py  settings.py
note/: dev.md
