[project]
name = "Sirius"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sudoskys", email = "n"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.5.0",
]
